--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/ollie314/bf-js/issues"
   },
-  "homepage": "https://github.com/ollie314/bf-js#readme"
+  "homepage": "https://github.com/ollie314/bf-js#readme",
+  "devDependencies": {
+    "mocha": "^3.1.2",
+    "should": "^11.1.1"
+  }
 }
