--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "mocha": "^3.1.2",
     "should": "^11.1.1"
+  },
+  "dependencies": {
+    "lodash": "^4.16.6"
   }
 }
